# contrib--llm-commit

./: .drone.yml  .gitignore  README.md  llm_commit.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
tests/: test_llm_commit.py
