[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-commit-gen"
version = "1.1.0"
description = "A plugin for llm that generates commit messages"
authors = [
    { name = "Grigoris Ntousakis", email = "greco1996@gmail.com" },
    { name = "Glenn Rolland", email = "glenux@glenux.net" }
]
dependencies = [
    "click",
    "llm",
    "mdformat"
]

# The 'llm' entry-point tells the 'llm' CLI where to find your plugin code.
[project.entry-points."llm"]
commit = "llm_commit"

[project.optional-dependencies]
test = ["pytest"]
